[package]
name = "sm2"
version = "0.0.0-next2"
edition = "2018"

description = "SuperMemo2 written in Rust, compiled to WebAssembly"
repository = "https://github.com/repeatnotes/sm2"
license = "AGPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-check", "run-cargo-fmt"]

[lib]
crate-type = ["cdylib"]
